Changed folder structure to be consistent with other D2L.Services.Core.* libraries; build to /build/output

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/bin
+/build
 /obj
-/src/packages
-/build/*.nupkg
-/build/publish-*.bat
+/packages
+/publish/*.nupkg
+/publish/publish-*.bat
 NuGet.exe
