--- a/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
+++ b/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
@@ -16,19 +16,17 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsNotAsErrors>1591,1030</WarningsNotAsErrors>
-    <BaseIntermediateOutputPath>..\..\obj\</BaseIntermediateOutputPath>
+    <BaseIntermediateOutputPath>..\obj\</BaseIntermediateOutputPath>
+	<OutputPath>..\build\output\</OutputPath>
+	<DocumentationFile>..\build\output\D2L.Services.Core.Postgres.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-    <OutputPath>..\..\bin\Debug\</OutputPath>
-    <DocumentationFile>..\..\bin\Debug\D2L.Services.Core.Postgres.xml</DocumentationFile>
     <DebugSymbols>True</DebugSymbols>
     <DebugType>Full</DebugType>
     <Optimize>False</Optimize>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <OutputPath>..\..\bin\Release\</OutputPath>
-    <DocumentationFile>..\..\bin\Release\D2L.Services.Core.Postgres.xml</DocumentationFile>
     <DebugType>PdbOnly</DebugType>
     <Optimize>True</Optimize>
     <DefineConstants>TRACE</DefineConstants>
