Moved DataNotFoundException out of Exceptions folder & namespace

--- a/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
+++ b/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataNotFoundException.cs" />
     <Compile Include="Default\PostgresDatabase.cs" />
     <Compile Include="Default\PostgresExecutorBase.cs" />
     <Compile Include="Default\PostgresTransaction.cs" />
@@ -51,7 +52,6 @@
     <Compile Include="Enumeration\IAsyncEnumerable.cs" />
     <Compile Include="Enumeration\IAsyncEnumerator.cs" />
     <Compile Include="Enumeration\IOnlineResultSet.cs" />
-    <Compile Include="Exceptions\DataNotFoundException.cs" />
     <Compile Include="InternalExtensions.cs" />
     <Compile Include="IPostgresDatabase.cs" />
     <Compile Include="IPostgresExecutor.cs" />
@@ -67,7 +67,6 @@
     <Folder Include="Default" />
     <Folder Include="Enumeration" />
     <Folder Include="Enumeration\Default" />
-    <Folder Include="Exceptions" />
   </ItemGroup>
   <ItemGroup>
     <None Include="D2L.Services.Core.Postgres.nuspec" />
