--- a/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
+++ b/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
@@ -33,6 +33,9 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="D2L.Services.Core.Extensions">
+      <HintPath>..\packages\D2L.Services.Core.Extensions.1.1.1.0\lib\net451\D2L.Services.Core.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="Npgsql">
       <HintPath>..\packages\Npgsql.3.1.1\lib\net451\Npgsql.dll</HintPath>
     </Reference>
@@ -45,7 +48,7 @@
     <Compile Include="Default\PostgresDatabase.cs" />
     <Compile Include="Default\PostgresExecutorBase.cs" />
     <Compile Include="Default\PostgresTransaction.cs" />
-    <Compile Include="InternalExtensions.cs" />
+    <Compile Include="IDisposable.Extensions.cs" />
     <Compile Include="IPostgresDatabase.cs" />
     <Compile Include="IPostgresExecutor.cs" />
     <Compile Include="IPostgresTransaction.cs" />
