Replaced BuildNuGetPackage.ps1 with a simpler package.ps1 script that just creates a local NuGet package. Publishing is now handled automatically by Jenkins upon a merge to master.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /build
 /obj
 /packages
-/publish/*.nupkg
-/publish/publish-*.bat
+/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.*.nupkg
 NuGet.exe
