Improved handling of conversion between a Postgres timestamp/timestampz and a C# DateTime

--- a/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
+++ b/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataNotFoundException.cs" />
+    <Compile Include="DbTypeConverter.cs" />
     <Compile Include="Default\PostgresDatabase.cs" />
     <Compile Include="Default\PostgresExecutorBase.cs" />
     <Compile Include="Default\PostgresTransaction.cs" />
