Moved local NuGet packaging script to build folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/build
+/build/output
 /obj
 /packages
-/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.*.nupkg
+/build/D2L.Services.Core.Postgres.*.nupkg
 NuGet.exe
