--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,9 @@
 /packages
 /build/D2L.Services.Core.Postgres.*.nupkg
 NuGet.exe
-D2L.Services.Core.Postgres.shfbproj
 /Help
+/D2L.Services.Core.Postgres.userprefs
+/D2L.Services.Core.Postgres.shfbproj
+/.vs
+*.suo
+/D2L.Services.Core.Postgres.Tests/OpenCover
