--- a/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
+++ b/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
@@ -45,7 +45,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataNotFoundException.cs" />
-    <Compile Include="DbTypeConverter.cs" />
     <Compile Include="Default\PostgresDatabase.cs" />
     <Compile Include="Default\PostgresExecutorBase.cs" />
     <Compile Include="Default\PostgresTransaction.cs" />
@@ -59,9 +58,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\FriendAssemblies.cs" />
     <Compile Include="PublicExtensions.cs" />
+    <Compile Include="TypeConverters\DbTypeConverter.cs" />
+    <Compile Include="TypeConverters\Default\ArrayTypeConverter.cs" />
+    <Compile Include="TypeConverters\Default\DateTimeTypeConverter.cs" />
+    <Compile Include="TypeConverters\Default\DefaultTypeConverter.cs" />
+    <Compile Include="TypeConverters\Default\EnumerableTypeConverter.cs" />
+    <Compile Include="TypeConverters\Default\ListTypeConverter.cs" />
+    <Compile Include="TypeConverters\Default\NullableTypeConverter.cs" />
+    <Compile Include="TypeConverters\IPostgresTypeConverter.cs" />
+    <Compile Include="TypeConverters\PostgresTypeConverterAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Default" />
+    <Folder Include="TypeConverters" />
+    <Folder Include="TypeConverters\Default" />
   </ItemGroup>
   <ItemGroup>
     <None Include="D2L.Services.Core.Postgres.nuspec" />
