Added unit test on DefaultTypeConverter; Added unit test to verify that converters are only constructed once

--- a/D2L.Services.Core.Postgres.Tests/D2L.Services.Core.Postgres.Tests.csproj
+++ b/D2L.Services.Core.Postgres.Tests/D2L.Services.Core.Postgres.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Integration\PostgresTransactionTests.cs" />
     <Compile Include="Integration\TypeConverterTests.cs" />
     <Compile Include="Types\TestId.cs" />
+    <Compile Include="Unit\DefaultTypeConverterTests.cs" />
     <Compile Include="Unit\PostgresCommandTests.cs" />
     <Compile Include="Unit\DbTypeConverterTests.cs" />
   </ItemGroup>
