Update D2L.D2L.Services.Core.Extensions packge

--- a/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
+++ b/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.csproj
@@ -33,8 +33,8 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="D2L.Services.Core.Extensions">
-      <HintPath>..\packages\D2L.Services.Core.Extensions.1.4.0.0\lib\net451\D2L.Services.Core.Extensions.dll</HintPath>
+    <Reference Include="D2L.Services.Core.Extensions, Version=2.0.3.46, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\D2L.Services.Core.Extensions.2.0.3.46\lib\netstandard2.0\D2L.Services.Core.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
