--- a/D2L.Services.Core.Postgres.Tests/D2L.Services.Core.Postgres.Tests.csproj
+++ b/D2L.Services.Core.Postgres.Tests/D2L.Services.Core.Postgres.Tests.csproj
@@ -36,8 +36,8 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="D2L.Services.Core.Extensions">
-      <HintPath>..\packages\D2L.Services.Core.Extensions.1.4.0.0\lib\net451\D2L.Services.Core.Extensions.dll</HintPath>
+    <Reference Include="D2L.Services.Core.Extensions, Version=2.0.3.46, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\D2L.Services.Core.Extensions.2.0.3.46\lib\netstandard2.0\D2L.Services.Core.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="D2L.Services.Core.TestFramework">
       <HintPath>..\packages\D2L.Services.Core.TestFramework.3.1.0\lib\net451\D2L.Services.Core.TestFramework.dll</HintPath>
