--- a/D2L.Services.Core.Postgres.Tests/D2L.Services.Core.Postgres.Tests.csproj
+++ b/D2L.Services.Core.Postgres.Tests/D2L.Services.Core.Postgres.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
     <RestorePackages>true</RestorePackages>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -19,8 +19,10 @@
     <ProjectReference Include="..\D2L.Services.Core.Postgres\D2L.Services.Core.Postgres.csproj" />
   </ItemGroup>
   <ItemGroup>
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="D2L.Services.Core.TestFramework" Version="5.0.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
   </ItemGroup>
 </Project>
