--- a/D2L.Services.Core.Postgres.Tests/D2L.Services.Core.Postgres.Tests.csproj
+++ b/D2L.Services.Core.Postgres.Tests/D2L.Services.Core.Postgres.Tests.csproj
@@ -25,4 +25,7 @@
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Npgsql" Version="5.0.11" />
+  </ItemGroup>
 </Project>
