--- a/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.nuspec
+++ b/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.nuspec
@@ -12,16 +12,9 @@
 		<version>$version$</version>
 		
 		<dependencies>
-		  <group targetFramework=".NETStandard2.0">
-			<dependency id="D2L.Services.Core.Extensions" version="2.0.3.46" exclude="Build,Analyzers" />
-			<dependency id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" exclude="Build,Analyzers" />
-			<dependency id="Npgsql" version="4.1.9" exclude="Build,Analyzers" />
-			<dependency id="System.Memory" version="4.5.3" exclude="Build,Analyzers" />
-			<dependency id="System.Numerics.Vectors" version="4.5.0" exclude="Build,Analyzers" />
-			<dependency id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" exclude="Build,Analyzers" />
-			<dependency id="System.Text.Json" version="4.6.0" exclude="Build,Analyzers" />
-			<dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
-			<dependency id="System.ValueTuple" version="4.5.0" exclude="Build,Analyzers" />
+		  <group targetFramework="net5.0">
+			<dependency id="D2L.Services.Core.Extensions" version="3.0.0.50" exclude="Build,Analyzers" />
+			<dependency id="Npgsql" version="5.0.11" exclude="Build,Analyzers" />
 		  </group>
 		</dependencies>
 	</metadata>
