--- a/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.nuspec
+++ b/D2L.Services.Core.Postgres/D2L.Services.Core.Postgres.nuspec
@@ -1,21 +1,19 @@
-<?xml version="1.0"?>
-<package>
-	<metadata>
-		<id>$id$</id>
-		<title>$title$</title>
-		<authors>$author$</authors>
-		<owners>$author$</owners>
-		<projectUrl>https://git.dev.d2l/projects/D2LSER/repos/d2l.services.core.postgres</projectUrl>
-		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>$description$</description>
-		<copyright>$copyright$</copyright>
-		<version>$version$</version>
-		
-		<dependencies>
-		  <group targetFramework="net5.0">
-			<dependency id="D2L.Services.Core.Extensions" version="3.0.0.50" exclude="Build,Analyzers" />
-			<dependency id="Npgsql" version="5.0.11" exclude="Build,Analyzers" />
-		  </group>
-		</dependencies>
-	</metadata>
+<?xml version="1.0" encoding="utf-8"?>
+<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+  <metadata>
+    <id>D2L.Services.Core.Postgres</id>
+    <version>4.0.0</version>
+    <title></title>
+    <authors>D2L</authors>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <projectUrl>https://git.dev.d2l/projects/D2LSER/repos/d2l.services.core.postgres</projectUrl>
+    <description>This is a library that wraps Npgsql. It provides a simpler and easier way to interface with a Postgres database and adds additional functionality.</description>
+    <copyright></copyright>
+	<dependencies>
+	  <group targetFramework="net5.0">
+		<dependency id="D2L.Services.Core.Extensions" version="3.0.0.50" exclude="Build,Analyzers" />
+		<dependency id="Npgsql" version="5.0.11" exclude="Build,Analyzers" />
+	  </group>
+	</dependencies>
+  </metadata>
 </package>
